k8s/auth.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: auth-db
  namespace: webapps
  labels:
    app: auth-db
spec:
  selector:
    matchLabels:
      app: auth-db
  serviceName: auth-db-service
  replicas: 1
  template:
    metadata:
      labels:
        app: auth-db
    spec:
      containers:
      - name: auth-db-container
        image: mongo:latest
        resources:
          requests:
            cpu: 200m
            memory: 200Mi
          limits:
            cpu: 400m
            memory: 400Mi
        livenessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
            - mongosh
            - --eval
            - db.adminCommand('ping')
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        ports:
        - containerPort: 27017
          name: auth-db-port
        volumeMounts:
        - mountPath: /data/db
          name: auth-db-storage
      restartPolicy: Always
  volumeClaimTemplates:
  - metadata:
      name: auth-db-storage
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: ebs-storage

---
apiVersion: v1
kind: Service
metadata:
  name: auth-db-service
  namespace: webapps
spec:
  selector:
    app: auth-db
  clusterIP: None
  ports:
  - name: auth-db-port
    protocol: TCP
    port: 27017
    targetPort: 27017

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: webapps
  labels:
    app: auth
spec:
  selector:
    matchLabels:
      app: auth
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth-container
        image: kka01/timeshaasan-auth:latest
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 250m
            memory: 200Mi
        livenessProbe:
          tcpSocket:
            port: 5001
          initialDelaySeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /working
            port: 5001
          initialDelaySeconds: 10
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 5001
          name: auth-port
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: webapps
spec:
  selector:
    app: auth
  ports:
  - name: auth-port
    protocol: TCP
    port: 5001
