k8s/checklist.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name:  checklist-db
  namespace: webapps
  labels:
    app:  checklist-db
spec:
  selector:
    matchLabels:
      app:  checklist-db
  serviceName: checklist-db-service
  replicas: 1
  template:
    metadata:
      labels:
        app:  checklist-db
    spec:
      containers:
      - name:  checklist-db-container
        image:  mongo:latest
        resources:
          requests:
            cpu: 200m
            memory: 200Mi
          limits:
            cpu: 400m
            memory: 400Mi
        livenessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
            - mongosh
            - --eval
            - db.adminCommand('ping')
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        ports:
        - containerPort:  27017
          name:  checklisdb-port
        volumeMounts:
        - mountPath: /data/db
          name: checklist-db-storage
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: checklist-db-storage
      spec:
        accessModes:
        - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: ebs-storage


---

apiVersion: v1
kind: Service
metadata:
  name: checklist-db-service
  namespace: webapps
spec:
  selector:
    app: checklist-db
  clusterIP: None
  ports:
  - name: checklisdb-port
    protocol: TCP
    port: 27017
    targetPort: 27017

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  checklist-deployment
  namespace: webapps
  labels:
    app:  checklist
spec:
  selector:
    matchLabels:
      app:  checklist
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  checklist
    spec:
      containers:
      - name:  checklist-container
        image:  kka01/timeshaasan-checklist:latest
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 250m
            memory: 200Mi
        livenessProbe:
          tcpSocket:
            port: 5002
          initialDelaySeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /working
            port: 5002
          initialDelaySeconds: 10
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  5002
          name:  checklist-port
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: checklist-service
  namespace: webapps
spec:
  selector:
    app: checklist
  ports:
  - name: checklist-port
    protocol: TCP
    port: 5002
    targetPort: 5002
