k8s/kafka.yaml
---
  apiVersion: apps/v1
  kind: StatefulSet
  metadata:
    name: zookeeper
    namespace: webapps
    labels:
      app: zookeeper
  spec:
    serviceName: zookeeper
    replicas: 1
    selector:
      matchLabels:
        app: zookeeper
    template:
      metadata:
        labels:
          app: zookeeper
      spec:
        containers:
          - name: zookeeper-container
            image: wurstmeister/zookeeper
            resources:
              requests:
                cpu: 100m
                memory: 50Mi
              limits:
                cpu: 250m
                memory: 200Mi
            livenessProbe:
              exec:
                command:
                  - sh
                  - -c
                  - 'echo ruok | nc localhost 2181 | grep imok'
              initialDelaySeconds: 10
              periodSeconds: 30
            ports:
              - containerPort: 2181
                name: zookeeper-port
            volumeMounts:
              - mountPath: /data
                name: zookeeper-db-storage
    volumeClaimTemplates:
      - metadata:
          name: zookeeper-db-storage
        spec:
          accessModes:
          - ReadWriteOnce
          resources:
            requests:
              storage: 1Gi
          storageClassName: ebs-storage
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-service
  namespace: webapps
spec:
  selector:
    app: zookeeper
  ports:
    - name: zookeeper-port
      protocol: TCP
      port: 2181
      targetPort: 2181
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: webapps
  labels:
    app: kafka
spec:
  serviceName: kafka
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka-container
          image: wurstmeister/kafka
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - 'nc -z localhost 9092'
            initialDelaySeconds: 10
            periodSeconds: 30
          ports:
            - containerPort: 9092
              name: kafka-port
          volumeMounts:
            - mountPath: /kafka
              name: kafka-db-storage
  volumeClaimTemplates:
    - metadata:
        name: kafka-db-storage
      spec:
        accessModes:
        - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: ebs-storage
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: webapps
spec:
  selector:
    app: kafka
  ports:
    - name: kafka-port
      protocol: TCP
      port: 9092
      targetPort: 9092
