k8s/pomodoro.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name:  pomodoro-db
  namespace: default
  labels:
    app:  pomodoro-db
spec:
  selector:
    matchLabels:
      app:  pomodoro-db
  serviceName: pomodoro-db-service
  replicas: 1
  template:
    metadata:
      labels:
        app:  pomodoro-db
    spec:
      containers:
      - name:  pomodoro-db-container
        image:  mongo:latest
        resources:
          requests:
            cpu: 200m
            memory: 200Mi
          limits:
            cpu: 400m
            memory: 400Mi
        livenessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
            - mongosh
            - --eval
            - db.adminCommand('ping')
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        ports:
        - containerPort:  27017
          name:  pomodorodb-port
        volumeMounts:
        - mountPath: /data/db
          name: pomodoro-db-storage
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: pomodoro-db-storage
      spec:
        accessModes:
        - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: ebs-storage



---

apiVersion: v1
kind: Service
metadata:
  name: pomodoro-db-service
  namespace: default
spec:
  selector:
    app: pomodoro-db
  clusterIP: None
  ports:
  - name: pomodorodb-port
    protocol: TCP
    port: 27017
    targetPort: 27017

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  pomodoro-deployment
  namespace: default
  labels:
    app:  pomodoro
spec:
  selector:
    matchLabels:
      app:  pomodoro
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  pomodoro
    spec:
      containers:
      - name:  pomodoro-container
        image:  kka01/timeshaasan-pomodoro:latest
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 250m
            memory: 200Mi
        livenessProbe:
          tcpSocket:
            port: 5004
          initialDelaySeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /working
            port: 5004
          initialDelaySeconds: 10
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  5004
          name:  pomodoro-port
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: pomodoro-service
  namespace: default
spec:
  selector:
    app: pomodoro
  ports:
  - name: pomodoro-port
    protocol: TCP
    port: 5004
    targetPort: 5004
